[package]
name = "hyle_guest"
version = "0.1.0"
edition = "2021"

[workspace]


[dependencies]
risc0-zkvm = { version = "0.21.0", default-features = false }
hyle_contract = { git = "https://github.com/hyle-org/verifiers-for-hyle.git", branch = "main" }
serde = "1.0.209"
num-bigint = { version = "0.4" }
num-traits = "0.2.8"
poseidon-rs = "0.0.8"
arrayref = "0.3.5"
lazy_static = "1.4.0"
ff = { package = "ff_ce", version = "0.11", features = ["derive"] }
blake-hash = { version = "0.4.0", optional = true }
blake = { version = "2.0.1", optional = true }
